--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,17 @@
-CXXFLAGS=-Wall -Wextra -std=c++20 -I../src -O2
+CXXFLAGS=-Wall -Wextra -std=c++20 -ggdb
 LDFLAGS=-lstdc++
 
 .PHONY: all clean
 all: main
-main: main.o IF.o ID.o EX.o MEM.o WB.o state.o ending.o read_inst.o state.o
-ending.o: inst.hpp state.hpp
-read_inst.o: inst.hpp state.hpp
-IF.o: inst.hpp state.hpp
-ID.o: inst.hpp state.hpp
-EX.o: inst.hpp state.hpp
-MEM.o: inst.hpp state.hpp
-WB.o: inst.hpp state.hpp
+main: ending.o EX.o ID.o IF.o main.o MEM.o read_inst.o state.o WB.o
+ending.o: ending.cc state.hpp inst.hpp
+EX.o: EX.cc inst.hpp state.hpp
+ID.o: ID.cc inst.hpp state.hpp
+IF.o: IF.cc inst.hpp state.hpp
+main.o: main.cc state.hpp inst.hpp debug.hpp
+MEM.o: MEM.cc inst.hpp state.hpp
+read_inst.o: read_inst.cc
+state.o: state.cc state.hpp inst.hpp
+WB.o: WB.cc inst.hpp state.hpp
 clean:
 	rm *.o
